<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formulario_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.prueba.activities_jro.FormularioRegistro"
    android:weightSum="1">
    <!-- // android:hint="@string/form_username" -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textStyle="italic"
            android:textSize="@dimen/tamanoletra"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha Nacimiento"
        android:textStyle="italic"
        android:textSize="@dimen/tamanoletra"/>

    <DatePicker
        android:id="@+id/dpFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true" />

    <!-- <DatePicker
        android:layout_below="@+id/tilNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        />  -->


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textStyle="italic"
            android:textSize="@dimen/tamanoletra"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textStyle="italic"
            android:textSize="@dimen/tamanoletra"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:textStyle="italic"
            android:textSize="@dimen/tamanoletra"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreboton"/>

</LinearLayout>
